# datomish

./: Cargo.toml  project.clj
query-algebrizer/src/clauses/: pattern.rs
query/src/: lib.rs
release-react-native/: README.md  wrap_bare.sh
src/: main.rs
tx-parser/src/: lib.rs
